kube/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: ancean-dev
  labels:
    ancean: dev
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ancean.dev.test
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: ancean-web-service
            port:
              number: 4040

      - pathType: Prefix
        path: /api
        backend:
          service:
            name: ancean-api-service
            port:
              number: 6060
